--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "createAllTables": "tsc && npx sequelize db:migrate",
+    "deleteAllTables": "tsc && npx sequelize-cli db:migrate:undo",
+    "createAllSeeders": "tsc && npx sequelize-cli db:seed:all",
+    "deleteAllSeeders": "tsc && npx sequelize-cli db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +38,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.4",
-    "nodemon": "^3.1.4"
+    "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.4",
+    "sequelize-cli": "^6.6.2"
   }
 }
