added register user in application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "commonjs",
     "rootDir": "./",
     "outDir": "./dist",
+    "resolveJsonModule": true,
+    "lib": ["esnext"],
+    "moduleResolution": "node",
+    "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
